add shop, category, and some product test
